fixed spacing on home

--- a/styles.css
+++ b/styles.css
@@ -51,8 +51,15 @@ main {
     display: flex;
     flex-direction: column;
     align-items: center;
-    margin: 0;
     background-color: #233041;
+}
+
+h2 {
+    margin: 10px;
+}
+
+p {
+    padding-bottom: 10px
 }
 
 #stats-wrapper {
